# BFBC2_MasterServer

./: .gitignore  Dockerfile  README.md  docker-compose.mongo.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: deploy.yml  docker-image.yml
.grzybdev/: app.json  meta.json
BFBC2_MasterServer/: asgi.py  settings.py
Plasma/services/: account.py
Theater/: consumer.py  managers.py  transactor.py
Theater/transactions/: create_game.py  enter_game_host_response.py  enter_game_request.py  leave_game.py  player_entered.py  player_exited.py  update_game_data.py  update_game_details.py
bfbc2_masterserver/: __init__.py  database.py  error.py  helpers.py  manager.py  message.py  plasma.py  settings.py  theater.py
bfbc2_masterserver/database/: database.py
bfbc2_masterserver/database/mongo/: mongo.py
bfbc2_masterserver/dataclasses/: Client.py  Connection.py  Handler.py  Manager.py
bfbc2_masterserver/dataclasses/plasma/: Service.py
bfbc2_masterserver/enumerators/: ClientLocale.py  ClientPlatform.py  ErrorCode.py  MessageType.py  Transaction.py
bfbc2_masterserver/enumerators/client/: ClientLocale.py  ClientPlatform.py  ClientType.py
bfbc2_masterserver/enumerators/fesl/: FESLService.py  FESLTransaction.py  MessageFrom.py  MessageType.py
bfbc2_masterserver/enumerators/message/: MessageFrom.py  MessageType.py
bfbc2_masterserver/enumerators/plasma/: AssocationType.py  AssocationUpdateOperation.py  ListFullBehavior.py  PlasmaService.py  RecordName.py  StatUpdateType.py
bfbc2_masterserver/enumerators/theater/: GameType.py  JoinMode.py  TheaterCommand.py
bfbc2_masterserver/messages/: Client.py  Game.py  Message.py  Persona.py  Record.py  Stats.py
bfbc2_masterserver/messages/plasma/: Assocation.py  Association.py  DomainPartition.py  Entitlement.py  (+6 more)
bfbc2_masterserver/services/: service.py
bfbc2_masterserver/tools/: country_list.py  terms_of_service.py
(+155 files in other folders)
