[tool.poetry]
name = "bfbc2-masterserver"
version = "0.1.0"
description = "Master Server Emulator for Battlefield: Bad Company 2 that aims to be complete replacement for the original master server, allowing to play the game without contacting EA servers."
authors = ["Marek Grzyb <marek@grzyb.dev>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
bcrypt = "^4.1.3"
redis = "^5.0.4"
authlib = "^1.3.1"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
