[tool.poetry]
name = "bfbc2-masterserver"
version = "0.1.0"
description = "Master Server Emulator for Battlefield: Bad Company 2 that aims to be complete replacement for the original master server, allowing to play the game without contacting EA servers."
authors = ["Marek Grzyb <marek@grzyb.dev>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
authlib = "^1.3.2"
bcrypt = "^4.2.1"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
redis = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
